Revamped the menu and added toolbar. Added Owner column to Cubelist. Renamed global to Checkpoint for clarilty. Added Repair All button for all selected ships. Fixed Orientation calculation for asteroid although some tested models still don't work right and must be further analysied. Added absolute asteroid postion for model import. Player position still needs fixing.

--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -358,16 +358,8 @@
                                                 </DataTemplate>
                                             </GridViewColumn.CellTemplate>
                                         </controls:SortableGridViewColumn>
-                                        <!--<controls:SortableGridViewColumn Header="Position" DisplayMemberBinding="{Binding Position}" Width="80">
-                                            <controls:SortableGridViewColumn.SortBinding>
-                                                <MultiBinding>
-                                                    <Binding Path="Position.X" />
-                                                    <Binding Path="Position.Y" />
-                                                    <Binding Path="Position.Z" />
-                                                </MultiBinding>
-                                            </controls:SortableGridViewColumn.SortBinding>
-                                        </controls:SortableGridViewColumn>-->
                                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding FriendlyName}" Width="175"/>
+                                        <GridViewColumn Header="Owner" DisplayMemberBinding="{Binding OwnerName}" Width="175"/>
                                     </GridView>
                                 </ListView.View>
                                 <ListView.InputBindings>
