various unfinished changes. Added asteroid breakdown to Resource Report. Corrected report to display asteroid ore and not materials. Fixed extension on asteroid export. Added idle prioity/Beep/save finshed to asteroid model converter. Fixed bug where drag-drop would trigger on last item in list, causing duplicate. Prompting user for SE location.

--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -68,6 +68,11 @@
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=disk_blue}"/>
                         </MenuItem.Icon>
                     </MenuItem>
+                    <!--<MenuItem Command="{Binding SaveAsCommand}" Header="Save _As (Ctrl+A)">
+                        <MenuItem.Icon>
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=disk_blue}"/>
+                        </MenuItem.Icon>
+                    </MenuItem>-->
                     <Separator />
                     <MenuItem Command="{Binding ReloadCommand}" Header="_Reload (Ctrl+R)" ToolTip="Undo any changes, and reload world again.">
                         <MenuItem.Icon>
